src/yini_parser/grammar/generated/YiniParser.py
# Generated from ./grammar/v1.0.0-rc.5xxxx/YiniParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YiniParser ( Parser ):

    grammarFileName = "YiniParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'{}'", "'[]'", 
                     "<INVALID>", "<INVALID>", "'^'", "'\\u00A7'", "'>'", 
                     "'<'", "'='", "','", "':'", "'['", "']'", "'{'", "'}'", 
                     "'+'", "'$'", "'%'", "'@'", "';'" ]

    symbolicNames = [ "<INVALID>", "SHEBANG", "YINI_TOKEN", "INCLUDE_TOKEN", 
                      "DEPRECATED_TOKEN", "TERMINAL_TOKEN", "SECTION_HEAD", 
                      "INVALID_SECTION_HEAD", "BOOLEAN_FALSE", "BOOLEAN_TRUE", 
                      "NULL", "EMPTY_OBJECT", "EMPTY_LIST", "STRING", "NUMBER", 
                      "CARET", "SS", "GT", "LT", "EQ", "COMMA", "COLON", 
                      "OB", "CB", "OC", "CC", "PLUS", "DOLLAR", "PC", "AT", 
                      "SEMICOLON", "NL", "WS", "BLOCK_COMMENT", "DISABLED_LINE", 
                      "FULL_LINE_COMMENT", "INLINE_COMMENT", "KEY", "IDENT_INVALID", 
                      "REST", "META_INVALID" ]

    RULE_yini = 0
    RULE_prolog = 1
    RULE_terminal_stmt = 2
    RULE_terminal_trivia = 3
    RULE_stmt = 4
    RULE_full_line_comment_stmt = 5
    RULE_disabled_line_stmt = 6
    RULE_invalid_section_stmt = 7
    RULE_meta_stmt = 8
    RULE_directive = 9
    RULE_yini_directive = 10
    RULE_yini_mode_declaration = 11
    RULE_annotation = 12
    RULE_eol = 13
    RULE_assignment = 14
    RULE_member = 15
    RULE_value = 16
    RULE_scalar_value = 17
    RULE_concat_expression = 18
    RULE_concat_tail = 19
    RULE_concat_operand = 20
    RULE_string_literal = 21
    RULE_object_literal = 22
    RULE_object_members = 23
    RULE_object_member = 24
    RULE_object_member_separator = 25
    RULE_list_literal = 26
    RULE_elements = 27
    RULE_number_literal = 28
    RULE_null_literal = 29
    RULE_boolean_literal = 30
    RULE_bad_meta_text = 31
    RULE_bad_member = 32

    ruleNames =  [ "yini", "prolog", "terminal_stmt", "terminal_trivia", 
                   "stmt", "full_line_comment_stmt", "disabled_line_stmt", 
                   "invalid_section_stmt", "meta_stmt", "directive", "yini_directive", 
                   "yini_mode_declaration", "annotation", "eol", "assignment", 
                   "member", "value", "scalar_value", "concat_expression", 
                   "concat_tail", "concat_operand", "string_literal", "object_literal", 
                   "object_members", "object_member", "object_member_separator", 
                   "list_literal", "elements", "number_literal", "null_literal", 
                   "boolean_literal", "bad_meta_text", "bad_member" ]

    EOF = Token.EOF
    SHEBANG=1
    YINI_TOKEN=2
    INCLUDE_TOKEN=3
    DEPRECATED_TOKEN=4
    TERMINAL_TOKEN=5
    SECTION_HEAD=6
    INVALID_SECTION_HEAD=7
    BOOLEAN_FALSE=8
    BOOLEAN_TRUE=9
    NULL=10
    EMPTY_OBJECT=11
    EMPTY_LIST=12
    STRING=13
    NUMBER=14
    CARET=15
    SS=16
    GT=17
    LT=18
    EQ=19
    COMMA=20
    COLON=21
    OB=22
    CB=23
    OC=24
    CC=25
    PLUS=26
    DOLLAR=27
    PC=28
    AT=29
    SEMICOLON=30
    NL=31
    WS=32
    BLOCK_COMMENT=33
    DISABLED_LINE=34
    FULL_LINE_COMMENT=35
    INLINE_COMMENT=36
    KEY=37
    IDENT_INVALID=38
    REST=39
    META_INVALID=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class YiniContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YiniParser.EOF, 0)

        def prolog(self):
            return self.getTypedRuleContext(YiniParser.PrologContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YiniParser.StmtContext)
            else:
                return self.getTypedRuleContext(YiniParser.StmtContext,i)


        def terminal_stmt(self):
            return self.getTypedRuleContext(YiniParser.Terminal_stmtContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_yini

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYini" ):
                return visitor.visitYini(self)
            else:
                return visitor.visitChildren(self)




    def yini(self):

        localctx = YiniParser.YiniContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_yini)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 66
                self.prolog()


            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1840415014876) != 0):
                self.state = 69
                self.stmt()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 75
                self.terminal_stmt()


            self.state = 78
            self.match(YiniParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrologContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHEBANG(self):
            return self.getToken(YiniParser.SHEBANG, 0)

        def eol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YiniParser.EolContext)
            else:
                return self.getTypedRuleContext(YiniParser.EolContext,i)


        def getRuleIndex(self):
            return YiniParser.RULE_prolog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProlog" ):
                return visitor.visitProlog(self)
            else:
                return visitor.visitChildren(self)




    def prolog(self):

        localctx = YiniParser.PrologContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prolog)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(YiniParser.SHEBANG)
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 81
                        self.eol() 
                    self.state = 86
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 87
                        self.eol()

                    else:
                        raise NoViableAltException(self)
                    self.state = 90 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Terminal_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERMINAL_TOKEN(self):
            return self.getToken(YiniParser.TERMINAL_TOKEN, 0)

        def terminal_trivia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YiniParser.Terminal_triviaContext)
            else:
                return self.getTypedRuleContext(YiniParser.Terminal_triviaContext,i)


        def getRuleIndex(self):
            return YiniParser.RULE_terminal_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminal_stmt" ):
                return visitor.visitTerminal_stmt(self)
            else:
                return visitor.visitChildren(self)




    def terminal_stmt(self):

        localctx = YiniParser.Terminal_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_terminal_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(YiniParser.TERMINAL_TOKEN)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31 or _la==35:
                self.state = 95
                self.terminal_trivia()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Terminal_triviaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def full_line_comment_stmt(self):
            return self.getTypedRuleContext(YiniParser.Full_line_comment_stmtContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_terminal_trivia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminal_trivia" ):
                return visitor.visitTerminal_trivia(self)
            else:
                return visitor.visitChildren(self)




    def terminal_trivia(self):

        localctx = YiniParser.Terminal_triviaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_terminal_trivia)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.eol()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.full_line_comment_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def full_line_comment_stmt(self):
            return self.getTypedRuleContext(YiniParser.Full_line_comment_stmtContext,0)


        def disabled_line_stmt(self):
            return self.getTypedRuleContext(YiniParser.Disabled_line_stmtContext,0)


        def SECTION_HEAD(self):
            return self.getToken(YiniParser.SECTION_HEAD, 0)

        def invalid_section_stmt(self):
            return self.getTypedRuleContext(YiniParser.Invalid_section_stmtContext,0)


        def assignment(self):
            return self.getTypedRuleContext(YiniParser.AssignmentContext,0)


        def meta_stmt(self):
            return self.getTypedRuleContext(YiniParser.Meta_stmtContext,0)


        def bad_member(self):
            return self.getTypedRuleContext(YiniParser.Bad_memberContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = YiniParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.eol()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.full_line_comment_stmt()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.disabled_line_stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(YiniParser.SECTION_HEAD)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.invalid_section_stmt()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.assignment()
                pass
            elif token in [2, 3, 4, 40]:
                self.enterOuterAlt(localctx, 7)
                self.state = 111
                self.meta_stmt()
                pass
            elif token in [8, 9, 10, 11, 12, 13, 14, 19, 22, 24, 39]:
                self.enterOuterAlt(localctx, 8)
                self.state = 112
                self.bad_member()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_line_comment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FULL_LINE_COMMENT(self):
            return self.getToken(YiniParser.FULL_LINE_COMMENT, 0)

        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_full_line_comment_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFull_line_comment_stmt" ):
                return visitor.visitFull_line_comment_stmt(self)
            else:
                return visitor.visitChildren(self)




    def full_line_comment_stmt(self):

        localctx = YiniParser.Full_line_comment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_full_line_comment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(YiniParser.FULL_LINE_COMMENT)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 116
                self.eol()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Disabled_line_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISABLED_LINE(self):
            return self.getToken(YiniParser.DISABLED_LINE, 0)

        def getRuleIndex(self):
            return YiniParser.RULE_disabled_line_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisabled_line_stmt" ):
                return visitor.visitDisabled_line_stmt(self)
            else:
                return visitor.visitChildren(self)




    def disabled_line_stmt(self):

        localctx = YiniParser.Disabled_line_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_disabled_line_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(YiniParser.DISABLED_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Invalid_section_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVALID_SECTION_HEAD(self):
            return self.getToken(YiniParser.INVALID_SECTION_HEAD, 0)

        def getRuleIndex(self):
            return YiniParser.RULE_invalid_section_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvalid_section_stmt" ):
                return visitor.visitInvalid_section_stmt(self)
            else:
                return visitor.visitChildren(self)




    def invalid_section_stmt(self):

        localctx = YiniParser.Invalid_section_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_invalid_section_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(YiniParser.INVALID_SECTION_HEAD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directive(self):
            return self.getTypedRuleContext(YiniParser.DirectiveContext,0)


        def annotation(self):
            return self.getTypedRuleContext(YiniParser.AnnotationContext,0)


        def bad_meta_text(self):
            return self.getTypedRuleContext(YiniParser.Bad_meta_textContext,0)


        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_meta_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_stmt" ):
                return visitor.visitMeta_stmt(self)
            else:
                return visitor.visitChildren(self)




    def meta_stmt(self):

        localctx = YiniParser.Meta_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_meta_stmt)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.directive()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.annotation()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.bad_meta_text()
                self.state = 126
                self.eol()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yini_directive(self):
            return self.getTypedRuleContext(YiniParser.Yini_directiveContext,0)


        def INCLUDE_TOKEN(self):
            return self.getToken(YiniParser.INCLUDE_TOKEN, 0)

        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def string_literal(self):
            return self.getTypedRuleContext(YiniParser.String_literalContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirective" ):
                return visitor.visitDirective(self)
            else:
                return visitor.visitChildren(self)




    def directive(self):

        localctx = YiniParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_directive)
        self._la = 0 # Token type
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.yini_directive()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(YiniParser.INCLUDE_TOKEN)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 132
                    self.string_literal()


                self.state = 135
                self.eol()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yini_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def YINI_TOKEN(self):
            return self.getToken(YiniParser.YINI_TOKEN, 0)

        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def yini_mode_declaration(self):
            return self.getTypedRuleContext(YiniParser.Yini_mode_declarationContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_yini_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYini_directive" ):
                return visitor.visitYini_directive(self)
            else:
                return visitor.visitChildren(self)




    def yini_directive(self):

        localctx = YiniParser.Yini_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_yini_directive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(YiniParser.YINI_TOKEN)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 139
                self.yini_mode_declaration()


            self.state = 142
            self.eol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yini_mode_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEY(self):
            return self.getToken(YiniParser.KEY, 0)

        def getRuleIndex(self):
            return YiniParser.RULE_yini_mode_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYini_mode_declaration" ):
                return visitor.visitYini_mode_declaration(self)
            else:
                return visitor.visitChildren(self)




    def yini_mode_declaration(self):

        localctx = YiniParser.Yini_mode_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_yini_mode_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(YiniParser.KEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEPRECATED_TOKEN(self):
            return self.getToken(YiniParser.DEPRECATED_TOKEN, 0)

        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_annotation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnnotation" ):
                return visitor.visitAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def annotation(self):

        localctx = YiniParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_annotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(YiniParser.DEPRECATED_TOKEN)
            self.state = 147
            self.eol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(YiniParser.NL)
            else:
                return self.getToken(YiniParser.NL, i)

        def getRuleIndex(self):
            return YiniParser.RULE_eol

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEol" ):
                return visitor.visitEol(self)
            else:
                return visitor.visitChildren(self)




    def eol(self):

        localctx = YiniParser.EolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_eol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 149
                    self.match(YiniParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 152 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(YiniParser.MemberContext,0)


        def eol(self):
            return self.getTypedRuleContext(YiniParser.EolContext,0)


        def getRuleIndex(self):
            return YiniParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)



